# adconverter

./: .gitignore  Cargo.toml  README.md  TUSB16AD.lib  ad_mock.dll.lib
.github/workflows/: rust.yml
C/: USBADSMS.h
src/: helper.rs  lib.rs
src/helpers/: helper.rs  mod.rs  operation.rs  post.rs
src/operations/: interface.rs  mod.rs  utils.rs
