[package]
authors = ["Yudai Hayashi <34836226+Hayashi-Yudai@users.noreply.github.com>"]
edition = "2018"
name = "adconverter"
version = "0.1.0"

[features]
default = ["debug"]
release = []
debug = []

[dependencies]
synthrs = { git = "https://github.com/gyng/synthrs" }

[dev-dependencies]
rand = "*"
nearly_eq = "*"

[lib]
crate-type = ["dylib"]
name = "adconverter"
path = "src/lib.rs"
