[package]
authors = ["Yudai Hayashi <34836226+Hayashi-Yudai@users.noreply.github.com>"]
edition = "2018"
name = "adconverter"
version = "0.2.0"

[features]
release = []

[dependencies]
synthrs = { git = "https://github.com/gyng/synthrs" }
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
dotenv = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "*"
signalo_filters = "*"
signalo_traits = "*"

[dev-dependencies]
nearly_eq = "*"

[lib]
crate-type = ["dylib"]
name = "adconverter"
path = "src/lib.rs"
